[project]
name = "linkedin-mcp"
version = "0.1.0"
description = "LinkedIn Intelligence MCP Server - AI-powered LinkedIn analytics, content creation, and engagement automation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
authors = [
    { name = "TJ Pitre" }
]
keywords = ["linkedin", "mcp", "ai", "automation", "analytics", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # MCP SDK (FastMCP framework)
    "fastmcp>=2.0.0",

    # LinkedIn API (unofficial - tomquirk/linkedin-api)
    "linkedin-api>=2.3.1",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",

    # Scheduling
    "apscheduler>=3.10.4",

    # Browser Automation
    "playwright>=1.49.0",

    # Configuration & Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",

    # HTTP & Async
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",

    # Utilities
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "python-dateutil>=2.9.0",
    "cryptography>=44.0.0",

    # Secure Token Storage
    "keyring>=25.0.0",

    # Browser Cookie Extraction
    "browser-cookie3>=0.19.1",

    # Official LinkedIn API (OAuth)
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
linkedin-mcp = "linkedin_mcp.main:main"
linkedin-mcp-auth = "linkedin_mcp.cli.auth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ARG", "PTH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["linkedin_mcp"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=linkedin_mcp --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/linkedin_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
